--- a/星爺語錄/星爺語錄.html
+++ b/星爺語錄/星爺語錄.html
@@ -25,14 +25,14 @@
       background-position: center;
       background-size:cover;
       display: flex;
-      justify-content: center;
+      justify-content: space-evenly;
       align-items: center;
       flex-direction: column;
     }
 
     #game {
-      width: 1500px;
-      height: 760px;
+      width: 1600px;
+      height: 800px;
       /* border: 1px solid #fff; */
       display: flex;
       flex-wrap: wrap;
@@ -41,13 +41,13 @@
     }
 
     .card {
-      width: 320px;
-      height: 180px;
+      width: 310px;
+      height: 190px;
       position: relative;
       /* 設定子元素在 3D 空間內 */
       transform-style: preserve-3d;
       float: left;
-      margin: 5px 15px;
+      margin: 1px 20px;
       transition: .5s;
       border: 1px solid #000;
       box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5);
@@ -86,16 +86,16 @@
     }
 
     #title {
-      width:1560px;
-      height: 140px;
+      width:1360px;
+      height: 80px;
       border-width: 5px 15px 15px 4px;
       border-style: solid;
       border-color: #666 #999 #888 #777;
       color: white;
-      font-size: 5rem;
+      font-size: 3rem;
       font-style: italic;
       text-align: center;
-      line-height: 108px;
+      line-height: 50px;
       letter-spacing: 3px;
       padding-right: 15px;
       background-color: rgba(0, 0, 0, 0.5);
