--- a/星爺語錄/台詞大考驗.html
+++ b/星爺語錄/台詞大考驗.html
@@ -106,7 +106,7 @@
     }
 
     #menu {
-      border: #ffa solid 1px;
+      /* border: #ffa solid 1px; */
       width: 1200px;
       height: 40px;
       display: flex;
@@ -116,12 +116,14 @@
     .btn{
       height: 40px;
       width: 300px;
+      border-radius: 5px;
+      background:rgba(254, 208, 26,0.9);
     }
 
     #answer {
       width: 900px;
       height: 190px;
-      border: 1px solid #ffa;
+      /* border: 1px solid #ffa; */
       display: flex;
       justify-content: space-evenly;
       align-items: center;
@@ -138,7 +140,6 @@
       width: 200px;
       height: 50px;
       font-size: 1.3rem;
-      
     }
     </style>
 </head>
