Enter + 美化 + 雙擊取消 card-open

--- a/星爺語錄/電影名稱.html
+++ b/星爺語錄/電影名稱.html
@@ -443,7 +443,7 @@
       if ( $('.card-open').length < 1 && !$(this).hasClass('card-open')) {
         $(this).addClass('card-open')
       }
-      // 點選已翻開的牌可以讓它翻回背面
+      // 點選已翻開的牌可以讓它翻回背面。
       else if ( $('.card').hasClass('card-open')) {
         $(this).removeClass('card-open')
       } 
